# sweepstakelads

./: .gitignore  App.py  CLAUDE.md  DEPLOY_PLAN.md  DESIGN.md  PLAN_2026.md  README.md  TODO.md  Update_Scores.py  app.py  bracket.py  dev_seed.py  do_the_code.ipynb  pyproject.toml  requirements.txt  scoring.py  scraper.py  tournament.py
.github/workflows/: deploy.yml  test.yml
.ipynb_checkpoints/: do_the_code-checkpoint.ipynb
archive/: Euro_2024.csv  Update_Scores_2024.py
assets/: Euro_2024.xlsx  draw_2026.csv  dropdown-dark.js  fixtures.csv  group_standings.json  last_updated.txt  participants.csv  persontable.csv  s1.css  teamtable.csv
docs/: DEPLOY_PLAN.md  DESIGN.md  ELIMINATION_AND_TIEBREAKERS.md  FIX_WIDTH.md  PLAN_2026.md  REMEDIATION_PLAN.md
scripts/: deploy.sh  refresh_fixtures.py
tests/: test_app_localize.py  test_bracket.py  test_flags.py  test_scoring.py  test_scraper.py  test_tournament.py
tests/fixtures/: group_a_2026-05-11.wikitext  knockout_2026-05-11.wikitext
updates_documentation/: UPDATE-1.md  UPDATE-2.md  UPDATE-4.md  UPDATE-5.md  UPDATE-6.md  UPDATE-7.md  UPDATE-8.md
